Changes for 1.6.8

 - [ZBX-1470] fixed importing triggers with ':' in description (Vedmak)
 - [ZBX-1530] fixed wrong host selected clicking simple graph with dynamic item on screen (Vedmak)
 - [ZBX-1408] fixed adding images for postgresql (Aly)
 - [ZBX-3] remove a comment saying syslog is used until it works (Richlv)
 - [ZBX-1184] fixed support of more than 10 CPU's for system.cpu.util under Linux (Sasha)
 - [ZBX-1365] fixed housekeeper to process trends_uint table (Sasha)
 - [ZBX-1384] fixed memory leak in processing ldap checks (Sasha)
 - [ZBX-1355] fixed possible server crash when receiving invalid data. Thanks to Nicob (Sasha)
 - [ZBX-1031] added more security checks for communication between nodes. Thanks to Nicob (Sasha)
 - [ZBX-1309] fixed input file processing by zabbix_sender (-i option) (Sasha)
 - [ZBX-1284] fixed server crash if using zabbix[queue] check without dbcache (Sasha)
 - [ZBX-1276] fixed import template as template if status tag is after groups tag in xml (Vedmak)
 - [ZBX-1150] added refreshing of not supported performance counters (Sasha)

Changes for 1.6.7

 - [ZBX-1022] fixed syntax in parameter 'continue_pending' in services[] key (Sasha)
 - [ZBX-1202] fixed processing of proc_info[] check with 'sum' parameter. Thanks to Kazuo Ito (Sasha)
 - [ZBX-1148] fixed flap between available and unavailable for hosts with mixed agent and simple checks (Sasha)
 - [ZBX-1051] fixed processing of active checks list on the agent side. Symptom: 'Can't open JSON object' message (Sasha)
 - [ZBX-641] fixed oracle OCI-Lob parse (Aly)
 - [ZBX-1078] changed link in server info screen element (Vedmak)
 - [ZBX-1076] fixed IT services periods (Vedmak)
 - [ZBX-1019] fixed stacked graph displays 0 value (Vedmak)
 - [ZBX-1040] fixed error when massupdate triggers with empty dependency (Vedmak)
 - [ZBX-820] fixed updating downstream item applications when upstream item is updated without changing applications (Vedmak)