@@ -305,7 +305,7 @@ include_once 'include/page_header.php';
 		$icon->addOption('id','addrm_fav');
 		
 		$url = '?elementid='.$elementid.($_REQUEST['fullscreen']?'':'&fullscreen=1');
-		$url.=url_param('groupid').url_param('hostid');
+		$url.=url_param('groupid').url_param('hostid').url_param('stime').url_param('preiod');
 		
 		$fs_icon = new CDiv(SPACE,'fullscreen');
 		$fs_icon->addOption('title',$_REQUEST['fullscreen']?S_NORMAL.' '.S_VIEW:S_FULLSCREEN);
